[quteb/styles] Fix gmail dark mode toolbar buttons

--- a/config/qutebrowser/styles.css
+++ b/config/qutebrowser/styles.css
@@ -26,3 +26,9 @@ select {
 .Popover-module_body__3h5UO {
     color: darkturquoise;
 }
+
+/* gmail */
+/* fix dark mode toolbar buttons */
+.T-I.J-J5-Ji.T-I-ax7 > .asa > .T-I-J3.J-J5-Ji {
+    background-color: #c7c7c7;
+}
